# AIbroker

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  docs-check.yml  test.yml
docs/: README.md  api.md  architecture.md  auth.md  conventions.md  deploy-ops.md  domain-model.md  providers.md  roadmap.md  routing.md  security.md
infra/: migrate_legacy_usage.sh  nginx-aib.conf
infra/sql/: init.sql
infra/sql/migrations/: 001_add_is_reserve.sql  002_add_discovered_limits.sql  009_deep_jobs_queue.sql  (+7 more)
migrations/: README.md
services/asr-local/: Dockerfile  pyproject.toml
services/asr-local/src/asr_local/: app.py
src/aibroker/: __init__.py  auth.py  auth_session.py  config.py  crypto.py  main.py  monitor.py
tests/: conftest.py  test_adapters.py  test_asr_local.py  test_auth.py  test_auth_deps.py  test_auth_session.py  test_bootstrap.py  test_chains.py  test_circuit.py  test_config.py  test_context_limits.py  test_cooldown.py  test_cost_guard.py  test_crypto.py  test_dashboard_time.py  test_db_engine.py  test_db_resilience.py  test_deep_jobs.py  test_health_probes.py  test_health_probes_headers.py  test_job_queue.py  test_litellm_adapter.py  test_llm_service.py  test_monitor.py  test_observations.py  test_peak_pricing.py  test_providers.py  test_quotas.py  test_record_usage_portable.py  test_response_cache.py  test_routes_admin.py  test_routes_dashboard.py  test_routes_health.py  test_routes_landing.py  test_routes_proxy.py  test_routes_vending.py  test_routing.py  test_scopes.py  test_selector.py  test_selector_pure.py  (+2 more)
(+42 files in other folders)
