[project]
name = "aibroker"
version = "0.1.1"
description = "Centralized key broker for AI provider API keys"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "cryptography>=43",
    "httpx>=0.27",
    "litellm==1.92.0",
    "redis>=5",
    "structlog>=24.4",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "click>=8.1",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aibroker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC", "RUF"]
ignore = ["S101", "S104", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
